background-repeat fix on small media

--- a/scss/media/_small.scss
+++ b/scss/media/_small.scss
@@ -3,6 +3,7 @@
 		height: 100%;
 		background-position-y: top;
 		background-position-x: 68.5rem;
+		background-repeat: initial;
 	}
 	.wrapper {
 		max-width: 90%;
